jackson filtering and hal explorer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 # Enable debug logging for spring boot app
 logging.level.org.springframework=info
+
+# Enable all actuators
+management.endpoints.web.exposure.include=*
+
+# Show environment variables in actuator
+management.endpoint.env.show-values=always
