--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ management.endpoints.web.exposure.include=*
 
 # Show environment variables in actuator
 management.endpoint.env.show-values=always
+
+#Enable h2
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.defer-datasource-initialization=true
