--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 # Enable debug logging for spring boot app
 logging.level.org.springframework=info
 
+# Return JSON by default
+#spring.mvc.converters.preferred-json-mapper=jackson
+
 # Enable all actuators
 management.endpoints.web.exposure.include=*
 
@@ -18,8 +21,13 @@ spring.datasource.url=jdbc:mysql://localhost:3306/social-media-database
 spring.datasource.username=social-media-user
 spring.datasource.password=dummypassword
 spring.jpa.hibernate.ddl-auto=update
-
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+# Fix issue with id generation
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
+
+# Configure Spring Security
+spring.security.user.name=user
+spring.security.user.password=pass
 
 
